--- a/style.scss
+++ b/style.scss
@@ -88,7 +88,7 @@ li {
         transition: 0.1s;
     }
 
-    .burgerbtn {
+    #burgerbtn {
         display: none;
         width: 35px;
         height: 25px;
